# robo-advisor

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
app/: __init__.py  database.py  main.py  models.py  routes.py
app/schemas/: __init__.py  financial_modeling.py  portfolio.py  risk_profile.py
app/services/: financial_modeling_service.py  portfolio_service.py  risk_assessment_service.py
tests/: __init__.py  conftest.py  test_api.py  test_financial_modeling.py  test_financial_modeling_service.py  test_models.py
